--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,5 @@ spring.datasource.password=${POSTGRES_PASS:postgres}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
-
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.show-sql=true
