--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+post.api.url=http://localhost:8999/todos/
